# AppCore

./: .gitignore  README.md  ReleaseNotes.md  pyproject.toml
src/appcore/: __init__.py  appcore_base.py  base.py  constants.py  conversion.py  exception.py  helpers.py  logging.py  manager.py  memfile.py  shared.py  typing.py  validation.py
src/appcore/connector/: rmq.py  zmq.py
src/appcore/datastore/: __init__.py  datastore_base.py  exception.py  inifile.py  local.py  redis.py  system.py
src/appcore/multitasking/: __init__.py  _basic_queue.py  _message_frame.py  base.py  exception.py  exceptions.py  message_frame.py  multitasking.py  parent_process.py  queue.py  queue_message.py  scheduler.py  shared.py  signal.py  task.py  task_manager.py  task_queue.py  task_results.py  task_wrapper.py  watchdog.py
src/appcore/server/: telemetry.py  web.py  zmq.py
src/appcore/util/: functions.py  memfile.py
tests/: conftest.py  constants.py  web_request.py
tests/base/: test_conversion.py  test_helpers.py  test_importing.py  test_validation.py
tests/connector/: test_zmq.py
tests/conversion/: test_get_value_type.py  test_json.py  test_pickle.py  test_set_value.py
tests/data/: zmq_test.key  zmq_test.key_secret
tests/datastore/: test_inifile.py  test_local.py  test_redis.py  test_system.py
tests/multitasking/: test_multitasking.py  test_queue.py  test_watchdog.py
tests/server/: test_schedule.py  test_telemetry.py
