[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appcore"
version = "2.0.2"
authors = [
  { name="Jason Piszcyk", email="Jason.Piszcyk@gmail.com" },
]
description = "Core Components used to create an application"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "pytest",
  "crypto_tools @ git+https://github.com/JasonPiszcyk/CryptoTools",
]

[project.urls]
"Homepage" = "https://github.com/JasonPiszcyk/AppCore"
"Bug Tracker" = "https://github.com/JasonPiszcyk/AppCore/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
